--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.squareup.okio:okio:1.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.alibaba:fastjson:1.1.54.android'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
